[package]
name = "wadlauncher"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = "^0.34"
egui_dnd = "^0.15"
confy = "1.0.0"
serde = "^1.0"
serde_derive = "^1.0"
tinyfiledialogs = "3.9.1"
regex = "1.10"
wad = "0.3.2"
arboard = "3.6.0"

[dependencies.uuid]
version = "1.22.0"
features = ["v4"]

[profile.release]
strip = "symbols"
